# x64vcpu

./: .gitignore  CMakeLists.txt  README.md
cpu/: cpu.c  cpu.h  disasm.c  disasm.h  dynamic_recompiler.c  dynamic_recompiler.h  opcode_decoder.c  opcode_decoder.h  opcode_decoder32.c  virtual_memory.c  virtual_memory.h
debugger/: Buffer.cc  Buffer.h  Debugger.cc  Debugger.h  Window.cc  Window.h  main.cc
debugger/modules/: CPUViewer.cc  CallStack.cc  CodeLog.cc  Disassembler.cc  MemoryViewer.cc  Modules.cc  Modules.h  StackView.cc
environment/: Environment.cc  Environment.h
environment/linux/: ElfLoader.cc  ElfLoader.h  EnvLinux.cc  EnvLinux.h  EnvLinuxIO.cc  EnvLinuxIO.h  EnvLinuxSyscall.cc  EnvLinuxSyscall.h  elf-file.c  elf-file.h
environment/win/: EnvWin32.cc  EnvWin32.h  PEFile.cc  PEFile.h
samples/: dbg.cc  linload.cc  pedumper.cc  primes.cc  primes_vm.cc
test/: test03.c  test04.c  test05.c  test06.c
wrappers/: cpu.i  cputest.pl  cputest2.pl  env.i  envtest.pl  pedump.pl
